--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,10 @@
             <version>3.7.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
